pet_connect_register_repo/manifests/pet_register-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-connect-petregister-service
spec:
  type: LoadBalancer
  selector:
    app: pet-connect-petregister
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
